# k8s-file-explorer

./: .gitignore  AGENTS.md  PRD.md  README.md  TODO.md  index.html  macos-release.md  package-lock.json  package.json
docs/: app.js  index.html  styles.css
release-notes/: release-notes-v0.1.0.md
scripts/: ensure-vite-dev.mjs  verify-macos-release.sh
src/: i18n.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
website/: app.js  index.html
