[package]
name = "k8s-file-explorer"
version = "0.1.0"
description = "K8s File Explorer desktop app for Kubernetes pods"
authors = ["K8s File Explorer contributors"]
edition = "2021"

[lib]
name = "k8s_file_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
dirs = "6"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = [] }
wait-timeout = "0.2"
